add docs for cosmetics
